ping_pong/gke/manifests/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-svc
  namespace: exercises
spec:
  type: LoadBalancer
  selector:
    app: ping-pong
  ports:
    - port: 80
      protocol: TCP
      targetPort: 5001
