ping_pong/gke/manifests/06-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: ping-pong-route
spec:
  parentRefs:
  - name: ping-pong-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /pingpong
    backendRefs:
    - name: ping-pong-svc 
      port: 80
